--- a/index.html
+++ b/index.html
@@ -8,9 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="name-highlight">ctafsiras</span> Website</h1>
-    <h3>Web Application Developer, Digital Marketer and Tech Analyser</h3>
-    <p>Hey there, I am ctafsiras. I do web development profesionally from my early age. After spending some times i started geeking about technology things. And later that i started learning Digital Marketing to bring my  service towards the world. Thanks for visiting my portfolio website. Have a good day.</p>
+   <section class="top-banner">
+       <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="name-highlight">ctafsiras</span> Website</h1>
+        <h3>Web Application Developer, Digital Marketer and Tech Analyser</h3>
+        <p>Hey there, I am ctafsiras. I do web development profesionally from my early age. After spending some times i started geeking about technology things. And later that i started learning Digital Marketing to bring my  service towards the world. Thanks for visiting my portfolio website. Have a good day.</p>
+        <a class="my-button" target="_blank" href="https://www.linkedin.com/in/ctafsiras/">HIRE ME</a>
+       </div>
+       <div class="half-width">
+           <img src="images/jhankar.png" alt="">
+       </div>
+   </section>
+   <section class="dream-area">
+       <div class="half-width">
+           <img src="images/jhankar2.png" alt="">
+       </div>
+       <div class="half-width">
+           <h2>Dream Big</h2>
+           <h3>A true Dream, will never let you sleep</h3>
+           <p>Every human have some dream, without dream people just like robot who walks on others command. I have some dream to do in my life. I know that i cannot full fill my all dreams, but wondering to fullfill the dream drive to live my life in a great way.</p>
+           <a class="my-button" target="_blank" href="https://www.facebook.com/ctafsiras/">CONTACT ME</a>
+       </div>
+   </section>
+   <section class="experience-area">
+       <h2>Experiences</h2>
+       <div class="half-width single-exp" id="wd">
+           <h2>Web Development</h2>
+           <h3 class="name-highlight">2017 - Present | Full Stack Developer</h3>
+           <p>I started web development on way back 2017 when I got my first laptop from my brother. that time i just started to manage a website through WordPress. But this is the begeaning of my learning Web Development</p>
+       </div>
+       <div class="half-width single-exp" id="dm">
+        <h2>Digital Marketing</h2>
+        <h3 class="name-highlight">2020 - Present | Social Media Marketer and Search Engine Optimizer</h3>
+        <p>After doing web development i could make websites but it wasnot enough to reach people and earn money. In this situation it was necessary to learn Digital Marketing.</p>
+    </div>
+   </section>
+   <footer>
+       <p>ctafsiras 2021 @ All rights reserved.</p>
+   </footer>
 </body>
 </html>
